<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Baddie Generator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_rollBadie">Add New Baddie</string>
    <string name="title_activity_card_veiwer">CardVeiwerActivity</string>
    <string name="title_activity_settings">Baddie Settings</string>
    <string name="title_activity_bad_guy_viewer">BadGuyViewer</string>
    <string name="NameHint">Name</string>
    <string name="Delete">Delete</string>
    <string name="speed">Speed:</string>
    <string name="Name">Name</string>
    <string name="SearchByHint">Search By Name</string>
    <string name="searchButton">GO!</string>
    <string name="strength">ST:</string>
    <string name="hp">HP:</string>
    <string name="dexterity">DX:</string>
    <string name="will">Will:</string>
    <string name="move">Move:</string>
    <string name="iq">IQ:</string>
    <string name="perception">Per:</string>
    <string name="health">HT:</string>
    <string name="fp">FP:</string>
    <string name="sm">SM:</string>
    <string name="dodge">Dodge:</string>
    <string name="parry">Parry:</string>
    <string name="dr">DR:</string>
    <string name="attack">Atc</string>
    <string name="dice">Dice</string>
    <string name="plus">+</string>
    <string name="notes">Notes</string>
    <string name="save">Save</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="saveDialog">Are you sure you want to update entry</string>
    <string name="deleteDialog">Are you sure you want to Delete this entry</string>
    <string name="banner_id">ca-app-pub-4244935540543623/3806044392</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
