<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    android:weightSum="1">

<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="285dp"
    android:layout_height="match_parent"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="2dp"
    android:layout_marginRight="2.5dp"
    android:layout_marginLeft="2.5dp"
    android:layout_marginBottom="5dp"
    android:layout_marginTop="5dp"
    android:background="@drawable/normal_button">


    <LinearLayout
        android:layout_width="285dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/cardveiw_horizontal_margin"
        android:paddingRight="@dimen/cardveiw_horizontal_margin">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText

                android:layout_width="181dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/NameHint"
                android:ems="10"
                android:id="@+id/name_textedit" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:background="@drawable/gurps_button"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:text="@string/Delete"
                android:id="@+id/card_action"
                android:textColor="@color/textOther" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strength"


                />

            <EditText
                android:layout_width="@dimen/cardveiw_edittext_width"
                android:layout_height="wrap_content"
                android:id="@+id/st_textedit"
                android:layout_marginRight="@dimen/cardveiw_item_horizontal_margin"
                android:textAlignment="center"
                android:numeric="integer"  />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hp"
                 />

            <EditText
                android:layout_width="@dimen/cardveiw_edittext_width"
                android:layout_height="wrap_content"
                android:id="@+id/hp_textedit"
                android:layout_marginRight="@dimen/cardveiw_item_horizontal_margin"
                android:textAlignment="center"
                android:numeric="integer" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speed"
                />

            <EditText
                android:layout_width="@dimen/cardveiw_edittext_width"
                android:layout_height="wrap_content"
                android:id="@+id/speed_textedit"
                android:numeric="integer" 
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dexterity"
                 />

            <EditText
                android:layout_width="@dimen/cardveiw_edittext_width"
                android:layout_height="wrap_content"
                android:id="@+id/dx_textedit"
                android:layout_marginRight="@dimen/cardveiw_item_horizontal_margin"
                android:textAlignment="center"
                android:numeric="integer" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/will"
                />

            <EditText
                android:layout_width="@dimen/cardveiw_edittext_width"
                android:layout_height="wrap_content"
                android:id="@+id/will_textedit"
                android:layout_marginRight="@dimen/cardveiw_item_horizontal_margin"
                android:textAlignment="center"
                android:numeric="integer" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/move"
                />

            <EditText
                android:layout_width="@dimen/cardveiw_edittext_width"
                android:layout_height="wrap_content"
                android:id="@+id/move_textedit"
                android:numeric="integer" 
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/iq"
                />

            <EditText
                android:layout_width="@dimen/cardveiw_edittext_width"
                android:layout_height="wrap_content"
                android:id="@+id/iq_textedit"
                android:layout_marginRight="@dimen/cardveiw_item_horizontal_margin"
                android:textAlignment="center"
                android:numeric="integer" 
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perception"
             />

            <EditText
                android:layout_width="@dimen/cardveiw_edittext_width"
                android:layout_height="wrap_content"
                android:id="@+id/per_textedit"
                android:layout_marginRight="@dimen/cardveiw_item_horizontal_margin"
                android:textAlignment="center"
                android:numeric="integer" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/health"
                 />

            <EditText
                android:layout_width="@dimen/cardveiw_edittext_width"
                android:layout_height="wrap_content"
                android:id="@+id/ht_textedit"
                android:layout_marginRight="@dimen/cardveiw_item_horizontal_margin"
                android:textAlignment="center"
                android:numeric="integer" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fp"
               />

            <EditText
                android:layout_width="@dimen/cardveiw_edittext_width"
                android:layout_height="wrap_content"
                android:id="@+id/fp_textedit"
                android:layout_marginRight="@dimen/cardveiw_item_horizontal_margin"
                android:textAlignment="center"
                android:numeric="integer" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sm"
                />

            <EditText
                android:layout_width="@dimen/cardveiw_edittext_width"
                android:layout_height="wrap_content"
                android:id="@+id/sm_textedit"
                android:numeric="integer" 
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dodge"
                />

            <EditText
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:id="@+id/dodge_textedit"
                android:layout_marginRight="@dimen/cardveiw_item_horizontal_margin"
                android:textAlignment="center"

                android:numeric="integer" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parry"
                 />

            <EditText
                android:layout_width="@dimen/cardveiw_edittext_width"
                android:layout_height="wrap_content"
                android:id="@+id/parry_textedit"
                android:layout_marginRight="0dp"
                android:textAlignment="center"
                android:numeric="integer" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dr"
                />

            <EditText
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:id="@+id/dr_textedit"
                android:numeric="integer" 
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attack"
                />

            <EditText
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:id="@+id/skill_textedit"
                android:layout_marginRight="0dp"
                android:textAlignment="center"
                android:numeric="integer" 
                 />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dice"
                 />

            <EditText
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:id="@+id/dice_textedit"
                android:layout_marginRight="0dp"
                android:textAlignment="center"
                android:numeric="integer" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus"
                 />

            <EditText
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:id="@+id/part_dice_textedit"
                android:numeric="integer" 
                android:textAlignment="center" />

            <EditText
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:id="@+id/atc_type_textedit"
                android:textAlignment="center"
                android:layout_weight="0.17" />

        </LinearLayout>

        <EditText
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:id="@+id/flavor_textedit"
            android:hint="@string/notes" />


    </LinearLayout>


</android.support.v7.widget.CardView>

    </LinearLayout>



