<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.grayherring.baddiegenerator.Activitys.CardVeiwerActivity"
    android:weightSum="1"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:layout_gravity="center_horizontal"
    >


    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/card_recycler_view"
        android:layout_weight="1"
        android:gravity="center_horizontal"

        >

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:background="@color/colorPrimary"
        android:id="@+id/line"
        android:layout_height="@dimen/lineheight"></LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/searchEditText"
            android:layout_weight="1"
            android:hint="@string/SearchByHint"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:text="@string/searchButton"
            android:onClick="search"
            android:background="@drawable/gurps_button"
            android:textColor="@color/text"
            android:id="@+id/searchbutton" />
    </LinearLayout>


    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_id">
    </com.google.android.gms.ads.AdView>


</LinearLayout>
